fix: playwright location

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,8 +128,8 @@ jobs:
 
       - name: Get installed Playwright version
         id: playwright-version
-        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package.json').devDependencies['playwright'])")" >> $GITHUB_OUTPUT
-
+        run: echo "PLAYWRIGHT_VERSION=$(grep -A 3 'playwright:' pnpm-workspace.yaml | grep '"playwright":' | awk '{print $2}')" >> $GITHUB_OUTPUT
+      
       - name: Cache playwright binaries
         uses: actions/cache@v4
         id: playwright-cache
@@ -142,7 +142,7 @@ jobs:
         run: pnpm install
 
       - name: Install Playwright
-        run: npx playwright install
+        run: pnpm --filter=e2e exec playwright install --with-deps
         if: steps.playwright-cache.outputs.cache-hit != 'true'
 
       - name: Run tests
