--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,6 @@ jobs:
   verify:
     name: Verify
     runs-on: ubuntu-latest
-    container:
-      # Make sure to grab the latest version of the Playwright image
-      # https://playwright.dev/docs/docker#pull-the-image
-      image: mcr.microsoft.com/playwright:v1.52.0-noble
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -60,7 +56,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright
-        run: pnpm --filter=e2e exec playwright install --with-deps
+        run: pnpm --filter=e2e exec playwright install --with-deps --no-shell
         if: steps.playwright-cache.outputs.cache-hit != 'true'
         
       - name: Lint application
