--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
   },
   "scripts": {
     "prepare": "husky",
-    "build:exports": "turbo run build:exports",
     "clean": "pnpm clean:root && turbo run clean",
     "clean:all": "pnpm clean:root && turbo run clean:all",
     "clean:root": "rimraf output",
-    "dev": "turbo run dev --no-daemon --concurrency 20",
-    "dev:mocks": "turbo run dev:mocks --no-daemon --concurrency 20",
+    "dev": "turbo run dev",
+    "dev:mocks": "turbo run dev:mocks",
     "dev:mocks:cli": "pnpm --filter=mock mocks",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint --no-daemon",
-    "lint:fix": "turbo run lint:fix --no-daemon && sherif --fix",
-    "build": "turbo run build --no-daemon",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix && sherif --fix",
+    "build": "turbo run build",
+    "build:exports": "turbo run build:exports",
+    "build:libs": "turbo run build:libs",
     "deploy": "turbo run deploy",
     "storybook": "turbo run storybook",
     "storybook:build": "turbo run storybook:build",
-    "test": "turbo run test --parallel --no-daemon",
+    "test": "turbo run test",
     "test:ci": "turbo run test:ci",
-    "test:coverage": "turbo run test:coverage --parallel --no-daemon",
-    "test:coverage:ci": "turbo run test:coverage:ci --parallel --no-daemon",
+    "test:coverage": "turbo run test:coverage",
+    "test:coverage:ci": "turbo run test:coverage:ci",
     "test:e2e": "concurrently -k -s \"command-e2e:headless\" -n \"e2e:headless,e2e:env\" -c \"magenta,blue\" \"pnpm test:e2e:headless\" \"pnpm test:e2e:env\"",
     "test:e2e:headless": "pnpm wait-on --timeout 30s tcp:5173 && pnpm --filter=e2e test:e2e",
-    "test:e2e:env": "turbo run test:e2e:env --parallel --no-daemon"
+    "test:e2e:env": "turbo run test:e2e:env"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
