--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -23,7 +23,7 @@ catalogs:
     eslint-plugin-import: 2.31.0
     eslint-plugin-prettier: 5.4.0
     eslint-plugin-react: 7.37.5
-    eslint-plugin-react-compiler: 19.0.0-beta-ebf51a3-20250411
+    eslint-plugin-react-compiler: 19.1.0-rc.2
     eslint-plugin-react-hooks: 5.2.0
     eslint-plugin-storybook: 0.12.0
     typescript-eslint: 8.32.1
@@ -37,6 +37,7 @@ catalogs:
   react19:
     '@types/react': 19.1.8
     '@types/react-dom': 19.1.6
+    babel-plugin-react-compiler: 19.1.0-rc.2
     react: 19.1.0
     react-dom: 19.1.0
   storybook:
