--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "src",
     "paths": {
       ".": ["."]
-    }
+    },
+    "types": ["@config/typescript/types"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
 }
