--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@package/api",
   "version": "0.6.0",
-  "description": "API client for the web application using Axios and React Query",  
+  "description": "API client for the web application using Axios and React Query",
   "license": "MIT",
   "private": true,
   "main": "./src/index.ts",
   "type": "module",
   "types": "./src/index.ts",
   "scripts": {
-    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src",
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "build:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json"
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
     "zod": ">=3.0.0"
-  },  
+  },
   "dependencies": {
     "axios": "1.9.0",
     "axios-auth-refresh": "3.3.6",
