--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -8,11 +8,11 @@
   "type": "module",
   "types": "./src/index.ts",
   "scripts": {
-    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src",
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "build:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json"
   },
   "devDependencies": {
     "@config/barrelsby": "workspace:*",
