--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -8,9 +8,9 @@
   "type": "module",
   "types": "./src/index.ts",
   "scripts": {
-    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
-    "clean:all": "pnpm clean node_modules"
+    "clean:all": "pnpm clean node_modules",
+    "build:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json"
   },
   "peerDependencies": {
     "@storybook/react": "catalog:storybook",
