--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,16 +11,16 @@
   "type": "module",
   "types": "./src/index.ts",
   "scripts": {
-    "generate:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json",
     "clean": "rimraf dist",
     "clean:all": "pnpm clean node_modules",
     "lint": "eslint ./src",
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "build:exports": "barrelsby -c node_modules/@config/barrelsby/barrelsby.json"
   },
   "peerDependencies": {
     "react": ">=19.0.0",
     "react-dom": ">=19.0.0"
-  },  
+  },
   "dependencies": {
     "@config/tailwind": "workspace:*",
     "@heroui/react": "catalog:design",
