--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -35,6 +35,7 @@
     "@config/vite": "workspace:*",
     "@package/storybook": "workspace:*",
     "@storybook/addon-a11y": "catalog:storybook",
+    "@storybook/addon-docs": "catalog:storybook",
     "@storybook/addon-themes": "catalog:storybook",
     "@storybook/addon-vitest": "catalog:storybook",
     "@storybook/builder-vite": "catalog:storybook",
