--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -41,13 +41,14 @@ catalogs:
     react: 19.1.0
     react-dom: 19.1.0
   storybook:
-    '@storybook/addon-a11y': 9.0.15
-    '@storybook/addon-themes': 9.0.15
-    '@storybook/addon-vitest': 9.0.15
-    '@storybook/builder-vite': 9.0.15
-    '@storybook/react': 9.0.15
-    '@storybook/react-vite': 9.0.15
-    storybook: 9.0.15
+    '@storybook/addon-a11y': 9.0.16
+    '@storybook/addon-docs': 9.0.16
+    '@storybook/addon-themes': 9.0.16
+    '@storybook/addon-vitest': 9.0.16
+    '@storybook/builder-vite': 9.0.16
+    '@storybook/react': 9.0.16
+    '@storybook/react-vite': 9.0.16
+    storybook: 9.0.16
   tailwind:
     tailwindcss: 4.1.10
     '@tailwindcss/aspect-ratio': 0.4.2
