--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -17,7 +17,9 @@
     "test:coverage:ci": "pnpm test:coverage && pnpm test:coverage:ci:move",
     "test:coverage:ci:move": "move-cli ./coverage/cobertura-coverage.xml \"../../output/coverage/web.xml\" --mkdirp",
     "storybook": "storybook dev -p 9050",
-    "storybook:build": "storybook build -o storybook-static"
+    "storybook:build": "storybook build -o storybook-static",
+    "storybook:nopen": "pnpm storybook --no-open"
+
   },
   "dependencies": {
     "@app/web": "workspace:*",
