--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deploy": "turbo run deploy",
     "storybook": "turbo run storybook",
     "storybook:build": "turbo run storybook:build",
+    "storybook:nopen": "turbo run storybook:nopen",
     "test": "turbo run test",
     "test:ci": "turbo run test:ci",
     "test:coverage": "turbo run test:coverage",
