feat: replace mkcert with vitejs basic ssl

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
     "@package/storybook": "workspace:*",
     "@storybook/react": "catalog:storybook",
     "@tailwindcss/vite": "catalog:tailwind",
+    "@vitejs/plugin-basic-ssl": "catalog:vite",
     "@vitejs/plugin-react": "catalog:vite",
     "babel-plugin-react-compiler": "catalog:react19",
     "storybook": "catalog:storybook",
@@ -55,7 +56,6 @@
     "usehooks-ts": "3.1.1",
     "vite": "catalog:vite",
     "vite-plugin-http2-proxy": "catalog:vite",
-    "vite-plugin-mkcert": "catalog:vite",
     "vite-plugin-pwa": "catalog:vite",
     "vite-tsconfig-paths": "catalog:vite",
     "vitest": "catalog:vitest",
