--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -60,11 +60,11 @@ catalogs:
     '@hookform/resolvers': 5.1.1
     zod: 3.25.76
   vite:
+    '@vitejs/plugin-basic-ssl': 2.1.0
     '@vitejs/plugin-react': 4.6.0
     vite: 6.3.5
     vite-tsconfig-paths: 5.1.4
     vite-plugin-http2-proxy: 0.5.0
-    vite-plugin-mkcert: 1.17.8
     vite-plugin-pwa: 1.0.1
   vitest:
     vitest: 3.2.4
