feat: migrate from react router to tanstack router

--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "*.ts": "prettier --write",
     "*.tsx": "prettier --write",
     "*.scss": "prettier --write"
+  },
+  "dependencies": {
+    "@tanstack/react-router": "^1.132.47",
+    "@tanstack/router-plugin": "^1.132.51"
   }
 }
