--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@package/ui": "workspace:*",
     "@tanstack/react-form": "1.23.7",
     "@tanstack/react-query": "5.83.0",
+    "@tanstack/react-router": "^1.103.2",
     "clsx": "2.1.1",
     "immer": "10.1.1",
     "jotai": "2.13.1",
@@ -46,6 +47,7 @@
     "@package/storybook": "workspace:*",
     "@storybook/react": "catalog:storybook",
     "@tailwindcss/vite": "catalog:tailwind",
+    "@tanstack/router-plugin": "^1.103.0",
     "@vitejs/plugin-basic-ssl": "catalog:vite",
     "@vitejs/plugin-react": "catalog:vite",
     "babel-plugin-react-compiler": "catalog:react19",
